--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <ol>
                         <li>
                             <h5>We want to dream real big</h5>
-                            <dev>
+                            <p>
                                 We making a plan to create an gadget that can detect every <b>Living thing</b> in every direction.
                                 But the reality hit us hard as we know Dream too big and it become <strong>Impossible</strong> to do.
-                            </dev>
+                            </p>
                         </li>
                         <li>
                             <h5>Learn to be humble and creative</h5>
@@ -88,7 +88,7 @@
 
         </section>
     </main>
-
+    <dev> Thank For the meeting</dev>
     <footer>
         <p>&copy; 2024 Meeting Minutes. All rights reserved.</p>
         <section>
