Update index.html fix error

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 
         </section>
     </main>
-    <dev> Thank For the meeting</dev>
     <footer>
         <p>&copy; 2024 Meeting Minutes. All rights reserved.</p>
         <section>
@@ -119,6 +118,6 @@
     </footer>
     
 </body>
-
+<dev><b>Thank For Reading the meeting record!</b></dev>
 
 </html>
