--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             </form>
         </section>
     </footer>
-    
+    <div>
+    <b>Thank for reading this meeting record</b>
+    </div>
 </body>
 
 </html>
