--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h2><b>Hard Hack 2024</b></h2>
             
             <section>
+                <h4>Picture of the Dectector gedget</h4>
                 <img src="Project.jpg" alt="The Project on HARD HACK 2024">
             </section>
             <section>
